projects/mdl-angular/scss/material/components/chips.scss
@use "../theme";
@use "../../colors.scss";
@use "@angular/material" as mat;

@include mat.chips-base(theme.$light-theme);
@include mat.chips-density(theme.$light-theme);
@include mat.chips-typography(theme.$light-theme);

.dark,
.light .dark {
  @include mat.chips-color(theme.$dark-theme);

  .mat-mdc-form-field .mat-mdc-chip-grid .mat-mdc-standard-chip {
    --mdc-chip-elevated-container-color: #{colors.$cool-gray-9};
    --mat-chip-elevated-container-color: #{colors.$cool-gray-9};
  }
}

.light,
.dark .light {
  @include mat.chips-color(theme.$light-theme);

  .mat-mdc-form-field .mat-mdc-chip-grid .mat-mdc-standard-chip {
    --mat-chip-elevated-container-color: #{colors.$cool-gray-3};
    --mat-chip-label-text-color: #{colors.$carbon};
  }

  // Selected chip: use SNCF primary-container color (MD3 uses --mat-chip-elevated-selected-container-color)
  .mat-mdc-chip.mdc-evolution-chip--selected {
    --mat-chip-elevated-selected-container-color: #{colors.$blue-10};
    --mat-chip-selected-label-text-color: #{colors.$blue};
  }
}

.dark,
.light .dark {
  .mat-mdc-chip.mdc-evolution-chip--selected {
    --mat-chip-elevated-selected-container-color: #{colors.$blue};
    --mat-chip-selected-label-text-color: #ffffff;
  }
}

.mdc-evolution-chip-set__chips {
  padding-right: 8px;
}

input.mat-mdc-chip-input {
  margin-left: 0 !important;
}

